# apple-fm-thai

./: .gitignore  README.md  modal_train.py  pyproject.toml
demo-app/: project.yml
demo-app/FMThaiDemo/: ContentView.swift  FMThaiDemoApp.swift  Info.plist
eval/: prompts.jsonl
scripts/: 01_download_dataset.py  02_explore_dataset.py  03_filter_and_convert.py  04_validate_dataset.py  05_validate_tokens.py  06_train.sh  07_export.sh  08_generate.py
